// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateArgument /> should render correctly 1`] = `
<Flex
  align="center"
  borderColor="gray.150"
  borderTop="normal"
  direction="row"
  justify="space-between"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  p={2}
>
  <Flex
    direction="column"
    flex="3"
    mr={4}
  >
    <Text
      color="blue.900"
      truncate={100}
    >
      Bonjour bonjour
    </Text>
    <InlineList
      color="gray.600"
      separator="•"
    >
      <Text>
        Vince
      </Text>
      <Text>
        <FormattedMessage
          id="global.publishDate.publishTime.feminine"
          values={
            Object {
              "date": <FormattedDate
                day="numeric"
                month="short"
                value={"2017-01-31T23:03:00.000Z"}
                year="numeric"
              />,
              "time": <FormattedDate
                hour="numeric"
                minute="numeric"
                value={"2017-01-31T23:03:00.000Z"}
              />,
            }
          }
        />
      </Text>
    </InlineList>
  </Flex>
  <Flex
    align="center"
    direction="row"
    flex="1"
    justify="space-between"
  >
    <Tag
      onClick={[Function]}
      variantColor="green"
    >
      <FormattedMessage
        id="argument.show.type.for"
        values={Object {}}
      />
    </Tag>
  </Flex>
</Flex>
`;

exports[`<DebateArgument /> should render correctly when no published 1`] = `
<Flex
  align="center"
  borderColor="gray.150"
  borderTop="normal"
  direction="row"
  justify="space-between"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  p={2}
>
  <Flex
    direction="column"
    flex="3"
    mr={4}
  >
    <Text
      color="blue.900"
      truncate={100}
    >
      Bonjour bonjour
    </Text>
    <InlineList
      color="gray.600"
      separator="•"
    >
      <Text>
        Vince
      </Text>
    </InlineList>
  </Flex>
  <Flex
    align="center"
    direction="row"
    flex="1"
    justify="space-between"
  >
    <Tag
      onClick={[Function]}
      variantColor="green"
    >
      <FormattedMessage
        id="argument.show.type.for"
        values={Object {}}
      />
    </Tag>
  </Flex>
</Flex>
`;
